force-app/main/default/objects/Credit_Note__c/fields/Amount_Allocated__c.field-meta.xml
<CustomField>
    <fullName>Amount_Allocated__c</fullName>
    <label>Amount Allocated</label>
    <summarizedField>Credit_Note_Assignment__c.Amount_Allocated__c</summarizedField>
    <summaryForeignKey>Credit_Note_Assignment__c.Credit_Note__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>