force-app/main/default/objects/Credit_Note__c/fields/Amount_Available__c.field-meta.xml
<CustomField>
    <fullName>Amount_Available__c</fullName>
    <formula>Credit_Amount__c - Amount_Allocated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Available</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>