force-app/main/default/objects/Credit_Note__c/validationRules/CreditNote_cannot_exceed_Invoice.validationRule-meta.xml
<ValidationRule>
    <fullName>CreditNote_cannot_exceed_Invoice</fullName>
    <active>true</active>
    <errorConditionFormula>Amount_Available__c &lt;0</errorConditionFormula>
    <errorMessage>A credit note cannot be allocated with more than the available amount</errorMessage>
</ValidationRule>